Network-Policies/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: nginx
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
      - ipBlock:
          cidr: 192.168.0.0/16
          except:
            - 192.168.2.0/24
      - namespaceSelector:
          matchLabels:
            name: anisa
      - podSelector:
          matchLabels:
            role: frontend
    ports:
      - protocol: TCP
        port: 6379
        endPort: 7000
  egress:
  - to:
    - ipBlock:
          cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
      endPort: 6000
